--- a/column-2.tex
+++ b/column-2.tex
@@ -1,7 +1,9 @@
+
 \cvsection{My Life Philosophy}
 \begin{quote}
 ``Something smart or heartfelt, preferably in one sentence.''
 \end{quote}
+
 \cvsection{Most Proud of}
 \cvachievement{\faTrophy}{Fantastic Achievement}{and some details about it}
 
@@ -12,16 +14,18 @@
 \divider
 
 \cvachievement{\faHeartbeat}{Another achievement}{more details about it of course}
+
 \cvsection{Strengths}
 \cvtag{Hard-working}
 \cvtag{Eye for detail}
-\cvtag{Motivator \& Leader}
+\\\cvtag{Motivator \& Leader}
 
 \divider\smallskip
 
 \cvtag{C++}
 \cvtag{Embedded Systems}
-\cvtag{Statistical Analysis}
+\\\cvtag{Statistical Analysis}
+
 \cvsection{Languages}
 \cvskill{English}{5}
 
@@ -32,6 +36,7 @@
 \divider
 
 \cvskill{German}{3}
+
 \cvsection{Education}
 \cvevent{Ph.D.\ in Your Discipline}{Your University}{Sept 2002 -- June 2006}{}
 Thesis title: Wonderful Research
@@ -44,6 +49,7 @@ Thesis title: Wonderful Research
 \divider
 
 \cvevent{B.Sc.\ in Your Discipline}{Stanford University}{Sept 1998 -- June 2001}{}
+
 
 \cvsection{referees}
 \cvref{Prof.\ Alpha Beta}{Institute}{a.beta@university.edu}{Address Line 1\\Address line 2}
