Make it possible to opt-out divider

--- a/column-2.tex
+++ b/column-2.tex
@@ -18,23 +18,17 @@
 \cvsection{Strengths}
 \cvtag{Hard-working}
 \cvtag{Eye for detail}
-\\\cvtag{Motivator \& Leader}
+\\\smallskip\cvtag{Motivator \& Leader}
 
 \divider\smallskip
 
 \cvtag{C++}
 \cvtag{Embedded Systems}
-\\\cvtag{Statistical Analysis}
+\\\smallskip\cvtag{Statistical Analysis}
 
 \cvsection{Languages}
 \cvskill{English}{5}
-
-\divider
-
 \cvskill{Spanish}{4}
-
-\divider
-
 \cvskill{German}{3}
 
 \cvsection{Education}
