--- a/personal-info.tex
+++ b/personal-info.tex
@@ -1,6 +1,4 @@
-\photoR{2.8cm}{Globe_High.png}\personalinfo{
-  \name{Your Name Here}
-  \tagline{Your Position or Tagline Here}
+\name{Your Name Here}\tagline{Your Position or Tagline Here}\photoR{2.8cm}{Globe_High.png}\personalinfo{
   \email{your_name@email.com}
   \phone{000-00-0000}
   \mailaddress{Åddrésş, Street, 00000 Cóuntry}
